fixed modal being out of bounds in smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,13 +135,15 @@ footer {
 
 .modal-content {
   background-color: white;
-  padding: 20px;
+  padding: 1rem;
   border-radius: 5px;
   text-align: center;
   position: relative;
   display: flex;
   flex-direction: column;
   min-width: 1000px;
+  height: auto;
+  overflow-y: auto;
 }
 
 .close-btn {
@@ -159,7 +161,7 @@ footer {
 }
 
 .form-item {
-  padding: 1.5rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -195,13 +197,13 @@ footer {
 }
 
 .info-label {
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: left;
   font-weight: 600;
 }
 
 .info-info {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 /* Mobile */
